css/style.css
/* VAR */
:root{
    /* colors */
    --body-bg-primary: #009688;
    --body-bg-secondary: #D9DBD4;

    --primary-bg: #EAEAEA;
    --secondary-bg: #8EDAFC;
    --tertiary-bg: #FAFAFA;

    --sent-bg: #D5F9BA;
    --received-bg: #FFFFFF;

    --font-gray: #B1B1B1;
    --font-dark-gray: #5D7494;
    /* sizes */
    --header-size: 70px;
    --alert-height: 80px;
    --search-height: 50px;
}
/* /VAR */

/* RESET */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
/* RESET */

/* COMMON */
html{
    font-family: 'Lato', sans-serif;
}

body{
    background-color: var(--body-bg-secondary);
    position: relative;
}

body::before{
    content: "";
    background-color: var(--body-bg-primary);
    display: block;
    width: 100%;
    height: 30vh;
    position: absolute;
    top: -5vh;
    left: 0;
    z-index: -1;
}

img{
    max-width: 100%;
}

a{
    color: inherit;
    text-decoration: none;
}

.avatar{
    display: inline-block;
    border-radius: 50%;
    overflow: hidden;
    vertical-align: middle;
    margin-right: .5rem;
}

.header-container{
    padding: 0 1rem;
    height: 100%;
}

.container{
    width: 90%;
    height: 100%;
    margin: 0 auto;
}

.user-name{
    display: inline-block;
    font-weight: 500;
}

.tools i{
    font-size: 1.2rem;
    color: var(--font-gray);
    margin-left: 1rem;
    cursor: pointer;
}

input[type="text"]{
    padding-left: .8rem;
    padding-right: .8rem;
}

input[type="text"]:focus{
    outline: none;
}

/* Flex */
.flex-container{
    display: flex;
}

.jc-between{
    justify-content: space-between;
}

.align-center{
    align-items: center;
}

.direction-col{
    flex-direction: column;
}
/* /flex */
/* /COMMON */

/* APP */
#app{
    width: 80%;
    height: 90vh;
    margin: 5vh auto;
    display: flex;
    /* debug */
    background-color: white;
}

/* Header */
header{
    width: 100%;
    height: var(--header-size);
    background-color: var(--primary-bg);
}

header .avatar{
    width: 3em;
    height: 3em;
}
/* /Header */

/* Conversation space */
.conversation{
    width: 35%;
    height: 100%;
    border-right: 1px solid var(--font-gray);
}

/* Main */
/* Section: alert */
#alert{
    height: var(--alert-height);
    width: 100%;
    background-color: var(--secondary-bg);
}

#alert .icon{
    width: 3em;
    height: 3em;
    text-align: center;
    line-height: 3em;
    background-color: white;
    border-radius: 50%;
    margin-right: 1rem;
}

#alert .icon i{
    font-size: 1.5rem;
    color: var(--secondary-bg);
}

#alert .text h2{
    font-size: 1rem;
    font-weight: 500;
}

#alert .text a{
    color: var(--font-dark-gray);
    text-decoration: underline;
    font-size: .8rem;
}
/* /Section: alert */

/* Section: search */
#search{
    height: var(--search-height);
    background-color: var(--tertiary-bg);
}

.search-btn{
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    background-color: white;
    color: var(--font-dark-gray);
    width: 15%;
    border: 1px solid var(--primary-bg);
    text-align: center;
    padding: .7rem 0;
    cursor: pointer;
}

.search-input{
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    border: 1px solid var(--primary-bg);
    border-left: none;
    padding: .7rem 0;
    width: 85%;
}
/* /Section: search */

/* Section: contacts */
#contacts{
    height: calc( 90vh - var(--header-size) - var(--alert-height) - var(--search-height));
    width: 100%;
    overflow-y: scroll;
}

.contact{
    padding: 1rem 0;
    cursor: pointer;
    transition: all 125ms linear;
}

.contact.active{
    background-color: var(--primary-bg);
}

.contact:hover{
    background-color: var(--primary-bg);
}

.contact-info{
    width: 50%;
}

.contact .avatar{
    width: 4em;
    height: 4em;
}

.last-message{
    display: block;
    white-space: nowrap;
    color: var(--font-gray);
    font-size: .8rem;
    margin-top: .2rem;
    overflow-x: hidden;
    text-overflow: ellipsis;
}
/* /Section: contacts */
/* /Main */
/* /Conversation space */

/* Chat space */
.chat{
    width: 65%;
    height: 100%;
}

.last-seen{
    display: block;
    color: var(--font-gray);
    font-size: .8rem;
    font-weight: 500;
}

.contact-info{
    display: inline-block;
    vertical-align: middle;
}

/* Chat wrapper */
.chat-wrapper{
    height: calc(90vh - var(--header-size) * 2);
    width: 100%;
    overflow-y: scroll;
    background-image: url(../img/mine.jpg);
    padding: 2rem 0;
}

.message-row{
    width: 50%;
    padding: 1.3rem 1rem;
    border-radius: 15px;
    margin-top: .5rem;
    position: relative;
}

.message-row.sent{
    background-color: var(--sent-bg);
    align-self: end;
}

.message-row.received{
    background-color: var(--received-bg);
}

.date{
    margin-top: .5rem;
    text-align: right;
    font-size: .5rem;
    color: var(--font-gray);
    position: absolute;
    bottom: 10px;
    right: 10px;
}
/* /Chat wrapper */

/* Chat tools */
.chat-tools{
    height: var(--header-size);
    width: 100%;
    background-color: var(--primary-bg);
}

.emoji-btn, 
.vocal-btn, 
.send-btn{
    width: 10%;
    height: 100%;
    text-align: center;
    font-size: 1.6rem;
    color: var(--font-dark-gray);
    background-color: rgba(0, 0, 0, 0);
    border: none;
    cursor: pointer;
}

.message-input{
    width: 80%;
    border:none;
    padding-top: 1rem;
    padding-bottom: 1rem;
    border-radius: 10px;
}
/* /Chat tools */
/* /Chat space */
/* /APP */

